-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.0 RC
-
None
-
-
841fe1e93 (dev), f47c1454f (6.7)
Declarative-camera fails on webassembly:
(firefox)
10:35:38.519 Camera permission is not granted! qtloader.js:389:25
10:35:38.519 QQmlComponent: Component destroyed while completion pending qtloader.js:389:25
10:35:38.527 Autoplay is only allowed when approved by the user, the site is activated by the user, or media is muted. qtloader.js line 461 > eval line 9 > Function:4:25
10:35:38.529
Uncaught (in promise) TypeError: can't access property "getVideoTracks", handle is null
Permissions work on Chrome on my own wasm-camera test app, but not in declarative-camera
==============
I think this might be a permissions thing for autoplay?
- relates to
-
QTBUG-108715 wasm: implement webgl context video output
-
- Open
-
| For Gerrit Dashboard: QTBUG-112316 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 548028,8 | wasm: fix camera showing in declarative | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 554802,2 | wasm: fix camera showing in declarative | 6.7 | qt/qtmultimedia | Status: MERGED | +2 | 0 |