wasm: fix camera showing in declarative

Wait for camera to become found before trying to make it active

Fixes: QTBUG-112316
Change-Id: Ic68c48be03909dbac11cf92d75387e25c74d573e
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>
(cherry picked from commit 841fe1e93b38cbfc4af78e6135501cda143161e5)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>