src/plugins/multimedia/wasm/mediacapture/qwasmcamera.cpp
@@ -8,6 +8,7 @@
 #include "private/qplatformvideosink_p.h"
 #include <private/qmemoryvideobuffer_p.h>
 #include <private/qvideotexturehelper_p.h>
+#include <private/qwasmmediadevices_p.h>
 
 #include "qwasmmediacapturesession_p.h"
 #include <common/qwasmvideooutput_p.h>
@@ -23,8 +24,33 @@
 Q_LOGGING_CATEGORY(qWasmCamera, "qt.multimedia.wasm.camera")
 
 QWasmCamera::QWasmCamera(QCamera *camera)
-    : QPlatformCamera(camera), m_cameraOutput(new QWasmVideoOutput)
+    : QPlatformCamera(camera),
+      m_cameraOutput(new QWasmVideoOutput),
+      m_cameraIsReady(false)
 {
+    QWasmMediaDevices *wasmMediaDevices =
+            static_cast<QWasmMediaDevices *>(QPlatformMediaIntegration::instance()->mediaDevices());
+
+    connect(wasmMediaDevices, &QWasmMediaDevices::videoInputsChanged,this, [this]() {
+        const QList<QCameraDevice> cameras = QMediaDevices::videoInputs();
+
+        if (!cameras.isEmpty()) {
+            if (m_cameraDev.id().isEmpty())
+                setCamera(cameras.at(0)); // default camera
+            else
+                setCamera(m_cameraDev);
+            return;
+        }
+    });
+
+    connect(this, &QWasmCamera::cameraIsReady, this, [this]() {
+        m_cameraIsReady = true;
+        if (m_cameraShouldStartActive) {
+            QTimer::singleShot(50, this, [this]() {
+                setActive(true);
+            });
+        }
+    });
 }
 
 QWasmCamera::~QWasmCamera() = default;
@@ -38,6 +64,11 @@ void QWasmCamera::setActive(bool active)
 {
     if (!m_CaptureSession) {
         emit error(QCamera::CameraError, QStringLiteral("video surface error"));
+        return;
+    }
+
+    if (!m_cameraIsReady) {
+        m_cameraShouldStartActive = true;
         return;
     }
 
@@ -56,6 +87,9 @@ void QWasmCamera::setActive(bool active)
 
 void QWasmCamera::setCamera(const QCameraDevice &camera)
 {
+    if (!m_cameraDev.id().isEmpty())
+        return;
+
     m_cameraOutput->setVideoMode(QWasmVideoOutput::Camera);
 
     constexpr QSize initialSize(0, 0);
@@ -65,15 +99,18 @@ void QWasmCamera::setCamera(const QCameraDevice &camera)
     m_cameraOutput->updateVideoElementGeometry(initialRect);
 
     const auto cameras = QMediaDevices::videoInputs();
+
     if (std::find(cameras.begin(), cameras.end(), camera) != cameras.end()) {
         m_cameraDev = camera;
         createCamera(m_cameraDev);
+        emit cameraIsReady();
         return;
     }
 
     if (cameras.count() > 0) {
         m_cameraDev = camera;
         createCamera(m_cameraDev);
+        emit cameraIsReady();
     } else {
         emit error(QCamera::CameraError, QStringLiteral("Failed to find a camera"));
     }
@@ -399,10 +436,6 @@ void QWasmCamera::setColorTemperature(int temperature)
 void QWasmCamera::createCamera(const QCameraDevice &camera)
 {
     m_cameraOutput->addCameraSourceElement(camera.id().toStdString());
-    // getUserMedia is async
-    QTimer::singleShot(100, [this] () {
-        m_cameraIsReady = m_cameraOutput->isCameraReady();
-    });
 }
 
 void QWasmCamera::updateCameraFeatures()
