src/plugins/multimedia/wasm/mediacapture/qwasmcamera_p.h
@@ -67,7 +67,8 @@ public:
     void setColorTemperature(int temperature) override;
 
     QWasmVideoOutput *cameraOutput() { return m_cameraOutput.data(); }
-
+Q_SIGNALS:
+    void cameraIsReady();
 private:
     void createCamera(const QCameraDevice &camera);
     void updateCameraFeatures();
@@ -89,6 +90,8 @@ private:
     QCamera::WhiteBalanceMode m_wasmWhiteBalanceMode;
     int m_wasmColorTemperature;
     bool m_cameraIsReady = false;
+    bool m_cameraShouldStartActive = false;
+    bool m_shouldBeActive = false;
 };
 
 QT_END_NAMESPACE
